# multi-agent-coding-squad

./: README.md  pyproject.toml  test.py
src/: config.py
src/api/: main.py
src/api/agent/: agent.py  session_store.py  tools.py
src/app/: index.html
src/logging/: __init__.py
