[project]
name = "multi-agent-coding-squad"
version = "0.1.0"
description = "Instead of one giant prompt trying to write code, split the responsibilities."
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-core>=0.3.15",
    "langchain-openai>=0.2.5",
    "langsmith>=0.1.139",
    "langchain-community>=0.3.5",
    "langchain>=0.3.7",
    "docarray>=0.40.0",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "dotenv",
    "tiktoken",
    "langgraph",
    "langchain-experimental",
    "matplotlib"
]